<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="charging_screen_charging_state_des" translatable="false">...........</string>
    <string name="charging_screen_time" translatable="false">%1$s:%2$s</string>
    <string name="charging_screen_date" translatable="false">%1$s %2$s %3$s</string>

    <string name="charging_screen_charged_left_describe">Full charge left %1$s</string>
    <string name="charging_screen_charged_full">Fully charged</string>
    <string name="charging_screen_menu_item">Turn off</string>
    <string name="charging_screen_charging_tip2">Reaching a temperature of 40\u2103 can be harmful for your battery.</string>
    <string name="charging_screen_charging_tip5">Even though the phone is not charged, it\’s safe to remove charger while in the almost charged mode.</string>
    <string name="charging_screen_charging_speed_charging_state_tip_view">Removing charger would be harmful to your battery</string>
    <string name="charging_screen_charging_continue_charging_state_tip_view">Phone is not charged, and it\’s safe to remove charger</string>
    <string name="charging_screen_charging_trickle_charging_state_tip_view">Air Launcher is reducing the charge to protect your battery</string>
    <string name="charging_screen_close_dialog_title">Turn Off Smart Charging?</string>
    <string name="charging_screen_close_dialog_content">If you turn off smart charging, you\'ll not be able to protect your battery anymore. Are you sure to turn it off?</string>
    <string name="charging_screen_close_dialog_negative_action">TURN OFF</string>
    <string name="charging_screen_close_dialog_positive_action">NOT NOW</string>
    <string name="charging_screen_guide_turn_on">Your battery is under protection!</string>

    <string name="smart_charging_spread_bottom_content_title">Smart Charging</string>
    <string name="smart_charging_spread_bottom_content_des1">Display real-time charging status.</string>
    <string name="smart_charging_spread_bottom_content_des2">Evaluate charging finish time.</string>
    <string name="smart_charging_spread_bottom_content_des3">Full charge and overcharge alerts</string>
    <string name="smart_charging_spread_tip">May contain ads.</string>
    <string name="smart_charging_spread_button">OPEN NOW</string>

    <string name="locker_2g" translatable="false">2G</string>
    <string name="locker_3g" translatable="false">3G</string>
    <string name="locker_4g" translatable="false">4G</string>
    <string name="locker_unkown" translatable="false">Unk</string>
    <string name="locker_menu_disable">Disable screensaver</string>
    <string name="locker_disable_confirm">Sure to turn off?</string>
    <string name="locker_disable_confirm_detail">Once disabled, you will not be able to see the screensaver. Proceed?</string>
    <string name="locker_diabled_success">The screensaver has been turned off</string>
    <string name="locker_slide_wallpaper_title">Screensaver Wallpaper</string>
    <string name="locker_settings_title">Screensaver</string>
    <string name="wallpaper_network_error">Network errors. Please try again.</string>
    <string name="game_locker_hint">点击开玩</string>
    <string name="unlock_tint_keyguard">上滑解锁</string>
    <string name="unlock_tint_no_keyguard">已解锁 上滑进入</string>

    <string name="comment_count">%d评论</string>
    <string name="loading_more">正在努力为您加载…</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="today_hot">今日热点</string>
    <string name="before_minutes">%d分钟前</string>
    <string name="before_hour">%d小时前</string>
    <string name="check_more">查看更多</string>
    <string name="sticky_new">置顶</string>
    <string name="daily_news_tou_tiao_connect_err">网络连接失败</string>
    <string name="daily_news_tou_tiao_connect_again">重新连接</string>
    <string name="daily_news_title_text">今日看点</string>
    <string name="no_network_now">当前无网络，请连接后重试</string>
    <string name="sdk_response_err">服务器返回出错</string>

    <string name="vital_notification_guide_content">打开通知提醒，\n 不再错过任何的重要通知</string>
    <string name="vital_notification_no_one">没有通知消息</string>

    <string name="vital_notification_title">通知</string>
    <string name="vital_notification_setting_auto_wake_title">自动亮屏</string>
    <string name="vital_notification_setting_auto_wake_content">来新消息时亮屏提醒</string>

    <string name="wake_duration">自动亮屏时段</string>

    <string name="app_selection">应用选择</string>

    <string name="wake_duration_title">自动亮屏时段</string>

    <string name="done_page_smart_lock">智能屏保</string>

    <string name="promote_smart_screen_title">激活 \"智能屏保\"</string>
    <string name="promote_smart_screen_toast_content">已开启智能屏保</string>

    <!-- Smart Lock Screen -->
    <string name="smart_lock_memory">内存使用</string>
    <string name="smart_lock_storage">存储空间</string>
    <string name="smart_lock_cpu">CPU温度</string>
    <string name="smart_lock_battery">电量信息</string>

    <string name="smart_locker_ram_text"><Data><![CDATA[ 手机运行很慢<font color="#ff9641"> 立即加速!</font>]]></Data> </string>
    <string name="smart_locker_storage_text">%s 垃圾 立即清理!</string>
    <string name="smart_locker_cpu_text"><Data><![CDATA[ CPU<font color="#ff9641">过热 </font>立即降温!]]></Data></string>
    <string name="smart_lock_close_dialog_title">你要关闭智能屏保吗？</string>
    <string name="smart_lock_close_dialog_content">如果你关闭智能屏保，你将无法保护你的电池和实时检测手机状态，是否确认关闭？</string>
    <string name="charging_screen_charged_left_describe2">充满还需：%s</string>
    <string name="charging_screen_unlock_describe">滑动解锁</string>
    <string name="charging_screen_right_unlock_describe">右滑解锁</string>
    <string name="screen_saver_close_dialog_title">你要关闭智能屏保吗？</string>
    <string name="screen_saver_close_dialog_content">如果你关闭智能屏保，你将不能实时检测手机状态，是否确认关闭？</string>


    <!--Notification-->
    <string name="charging_screen_cleaned_backstage_apps_notification">在手机睡眠期间已为您关闭%d个后台运行应用</string>
    <string name="charging_screen_high_temperature_notification">温度已达到%d\u2103</string>
    <string name="charging_screen_fully_charged_notification">已完成充电</string>

    <string name="charging_screen_promote_notification_title">已连接充电器</string>
    <string name="charging_screen_promote_notification_content0">点击使用"智能充电"管理你的电池状态</string>
    <string name="charging_screen_promote_notification_content1">启动"智能充电"监控充电状态</string>
    <string name="charging_screen_promote_notification_content2">开启"智能充电"，保护电池远离伤害</string>
    <string name="charging_screen_promote_notification_content3">开启"智能充电"可以帮助你关闭后台运行应用，提升充电速度</string>

    <string name="charging_screen_promote_notification_low_version_content">开启"智能充电"保护手机电池状态</string>
    <string name="charging_screen_promote_notification_low_version_content_right"> </string>

    <string name="battery_monitor_battery_low_power_notification_title">电量过低</string>
    <string name="battery_monitor_battery_low_power_notification_level_two_content" formatted="false">当前电量不足22%，去延长电池使用时长。</string>
    <string name="battery_monitor_battery_low_power_notification_level_one_content" formatted="false">仅剩余8%电量，一键关闭耗电应用！</string>
    <string name="battery_monitor_battery_low_power_notification_action">优化</string>

    <string name="notification_settings">通知设置</string>

    <string name="smart_locker_battery_title">%s 正在损耗你的电池</string>
    <string name="smart_locker_battery_title_data_unit">&#160;应用</string>

    <string name="smart_locker_memory_clean">&#160;内存被释放</string>

    <string name="smart_locker_battery_save_time">节省了%1$dm</string>
    <string name="smart_locker_battery_save_time_hour_minutes">节省了%1$dh %2$dm</string>
    <string name="smart_locker_battery_save_time_hour">节省了%1$dh</string>

    <string name="smart_locker_cpu_cool_down">CPU 正在冷却</string>
    <string name="smart_locker_battery_clean_up">%1$d%2$s 将在 %3$d 秒后降低</string>

    <!-- Smart Locker Alert -->

    <string name="smart_lock_alert_content_title">激活 \"智能充电\"</string>
    <string name="smart_lock_alert_content_tip1">监测并报告充电状态，保护您的电池。</string>
    <string name="smart_lock_alert_content_tip2">监测您的手机状态并进行优化。</string>
    <string name="smart_lock_alert_content_tip3">更好地管理您的通知信息。</string>

    <!-- recommend rule -->
    <string name="content_smart_lock_title">开启\"省电屏保\"</string>
    <string name="content_smart_lock_tip1">锁屏时智能清理耗电应用，延长待机时间。</string>
    <string name="content_smart_lock_tip2">监测您的手机状态并进行优化。</string>
    <string name="content_smart_lock_tip3">更好地管理您的通知信息。</string>

    <string name="content_smart_lock_enabled_toast">已开启智能屏保</string>

    <!-- Magic Locker-->
    <string name="main_content_title">下载智能锁</string>

    <string name="main_content_magic_type_battery">上千美丽壁纸和个性主题供你选择。</string>
    <string name="main_content_magic_type_boost">保护你的手机不被他人入侵。</string>
    <string name="main_content_magic_type_notification">无需解锁就能使用相机、计算器、手电筒等功能。</string>

    <string name="button_content_free_download">免费下载</string>

    <!-- Notifications -->
    <plurals name="content_notification_text">
        <item quantity="one">发现%s 条未读通知</item>
        <item quantity="other">发现%s 条未读通知</item>
    </plurals>

    <string name="content_notification_button_text">查看</string>
    <string name="promote_screen_saver_title">激活 \"智能屏保\"</string>
    <string name="promote_screen_saver_body">自动监控充电状态并停止过渡充电以防止电池损坏。</string>
    <string name="promote_screen_saver_body_with_charging_report">自动监控充电状态并停止过充电，以防止电池损坏。收到详细的充电报告。</string>
    <string name="promote_list_smart_charging_title">智能充电</string>
    <string name="promote_list_smart_charging_content">自动清理后台应用程序，检查电池状态以防止过度充电。</string>
    <string name="promote_list_smart_charging_toast">已开启智能充电</string>
    <string name="setting_smart_screen">智能屏保</string>
    <string name="setting_charging_screen">智能充电</string>
    <string name="setting_screen_saver">智能屏保</string>
    <string name="setting_charging_screen_switch">开启智能充电</string>
    <string name="setting_charging_fully_charged_reminder">电量充满提醒</string>
    <string name="setting_charging_high_temperature_reminder">高温提醒</string>
    <string name="set_successfully">设置成功</string>

    <string name="charging_screen_charging_tip2_Fahrenheit">Reaching a temperature of 131\u2109 can be harmful for your battery.</string>
    <string name="pick_time">%1$02d:%2$02d&#8212;&#8212;%3$02d:%4$02d</string>

    <string name="smart_lock_promote_title">省电屏保</string>
    <string name="smart_lock_promote_subtitle_2">快速充电</string>
    <string name="smart_lock_promote_subtitle_3">健康充电</string>
    <string name="smart_lock_promote_des_1">防止电量过充</string>
    <string name="smart_lock_promote_des_2">清理耗电应用</string>
    <string name="smart_lock_promote_des_3">延长电池寿命</string>
    <string name="smart_lock_promote_button">立即省电</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="ad_text">广告</string>
    <string name="side_bar_feedback">问题反馈</string>
    
    <string name="notification_no_useful_msg">ok</string>
</resources>
