<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_40_transparent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="276dp"
            android:background="@color/white_primary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="23dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/wake_duration"
                android:textColor="@color/black_87_transparent"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TimePicker
                    android:id="@+id/auto_wake_screen_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:numbersTextColor="@color/black_87_transparent"
                    android:timePickerMode="spinner" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="--"
                    android:textColor="@color/black_87_transparent" />

                <TimePicker
                    android:id="@+id/auto_wake_screen_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:numbersTextColor="@color/black_87_transparent"
                    android:timePickerMode="spinner" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/time_picker_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="48dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/cancel"
                    android:textColor="#89000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/time_picker_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/ok"
                    android:textColor="#4285f4"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>


