<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp">

    <RelativeLayout
        android:id="@+id/charging_alert_battery_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/charging_alert_bottom_container">

        <com.colorphone.lock.lockscreen.chargingscreen.view.GradientShadowView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/charging_alert_battery_container"
            android:layout_alignTop="@+id/charging_alert_battery_container"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="10dp"/>

        <FrameLayout
            android:id="@+id/charging_alert_battery_container"
            android:layout_width="90dp"
            android:layout_height="142dp"
            android:layout_centerHorizontal="true">

            <View
                android:layout_width="24dp"
                android:layout_height="8dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_smart_charging_spread_battery_header"/>

            <com.colorphone.lock.lockscreen.chargingscreen.view.WaterWaveView
                android:id="@+id/charging_alert_wave_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_smart_charging_spread_battery_body"/>

            <View
                android:id="@+id/charging_alert_blister1"
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_smart_charging_spread_des_index_circle"/>

            <View
                android:id="@+id/charging_alert_blister2"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="11dp"
                android:background="@drawable/shape_smart_charging_spread_des_index_circle"/>

            <View
                android:id="@+id/charging_alert_blister3"
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:layout_gravity="end"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_smart_charging_spread_des_index_circle"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="42dp"
                app:srcCompat="@drawable/ic_smart_charging_spread_shield"/>
        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/charging_alert_battery_container"
            android:layout_below="@+id/charging_alert_battery_container"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/smart_charging_spread_tail"/>

        <View
            android:layout_width="8dp"
            android:layout_height="12dp"
            android:layout_alignLeft="@+id/charging_alert_battery_container"
            android:layout_below="@+id/charging_alert_battery_container"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/shape_smart_charging_spread_plug"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/charging_alert_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.superapps.view.TypefacedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/smart_charging_spread_bottom_content_title"
            android:textColor="@color/material_text_black_primary"
            android:textSize="22sp"
            app:typeface="@string/custom_font_semibold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="28dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:background="@drawable/shape_smart_charging_spread_des_index_circle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:alpha="0.54"
                    android:text="@string/smart_charging_spread_bottom_content_des1"
                    android:textColor="#000"
                    android:textSize="@dimen/smart_charging_spread_content_font_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:background="@drawable/shape_smart_charging_spread_des_index_circle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:alpha="0.54"
                    android:text="@string/smart_charging_spread_bottom_content_des2"
                    android:textColor="#000"
                    android:textSize="@dimen/smart_charging_spread_content_font_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:background="@drawable/shape_smart_charging_spread_des_index_circle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:alpha="0.54"
                    android:text="@string/smart_charging_spread_bottom_content_des3"
                    android:textColor="#000"
                    android:textSize="@dimen/smart_charging_spread_content_font_size"/>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:visibility="gone"/>

        <com.colorphone.lock.lockscreen.chargingscreen.view.FlashButton
            android:id="@+id/charging_alert_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_smart_charging_spread_button"
            android:text="@string/smart_charging_spread_button"
            android:textColor="#fff"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="7dp"
            android:alpha="0.26"
            android:text="@string/smart_charging_spread_tip"
            android:textColor="#000"
            android:textSize="12sp"
            android:typeface="sans"/>
    </LinearLayout>
</RelativeLayout>